fixed styling that misaligned text in grids and added welcome message to navMenu

--- a/3pressed/src/CSS/main.css
+++ b/3pressed/src/CSS/main.css
@@ -33,13 +33,14 @@ body{
 .element {
   background: #fff;
   border-radius: 1rem;
-  padding: 1rem 2rem;
+  padding: 2em;
   min-width: 150px;
   min-height: 150px;
   text-align: center;
   vertical-align: middle;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  /* grid-template-columns: 2fr 1fr; */
+  grid-template-columns: 1 1fr;
 }
 
 /* img needs to be styled when we add avatars for tutor or icons for different listings */
@@ -62,13 +63,12 @@ body{
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
   float: left;
 }
 
 .navElement h4{
   /* todo color and other styling will be changed eventually, this just helps to keep track */
-  color: whitesmoke;
+  color: #a6a6a6;
   margin: 0 0 5px 10px;
 }
 
@@ -79,6 +79,15 @@ body{
   height: 30px;
   width: 30px;
   margin: 0 0 0 1em;
+}
+
+.welcomeMessage {
+  color: white;
+  padding: 1em;
+}
+
+.welcomeMessage h2{
+  font-size: 130%;
 }
 
 /* styling for 3Pressed Logo */
